name:                jdex
version:             0.1.0
synopsis:            Tool for extracting information from Javadoc-generated HTML documentation.
-- description:         
homepage:            https://github.com/jhrcek/jdex
license:             BSD3
license-file:        LICENSE
author:              Jan Hrcek
maintainer:          jhrcek@redhat.com
-- copyright:           
category:            Java
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  --main-is:             Jdex/Jdex.hs
  hs-source-dirs:      src
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       filepath,
                       HandsomeSoup == 0.3.5,
                       HUnit == 1.2.5.2,
                       hxt == 9.3.1.15,
                       hxt-xpath == 9.1.2.2
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures
